Created first templates & JS
Added jQuery, iDangerous swiper. Updated grunt task and built JS
components.

--- a/exhibitions/index.html
+++ b/exhibitions/index.html
@@ -2,53 +2,115 @@
 <html class="no-js" lang="en">
 <head>
 
-	<title>SABMiller</title>
+	<title>Hand</title>
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=1024, initial-scale=1.0, user-scalable=no">
 
 	<link rel="stylesheet" href="../_css/style.css">
 
 </head>
 <body>
 
-	<div class="exhibition_name">
+	<section class="exhibition_hero fill_viewport">
+		<div class="exhibition_hero_container">
+			<div class="hero_caption" data-exhibition-hero-caption>
+				<h1>Work Out</h1>
+				<hr>
+					<p>Kingston University</p>
+					<p>BA Graphic Design</p>
+					<p>3rd year degree show</p>
+				<hr>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, quidem, earum, nemo aliquid modi voluptate magni delectus rem doloremque fugit sed voluptatibus provident. Minus, nam, eius itaque laudantium ratione inventore.
+				</p>
+			</div>
+		</div>
+		<a href="#exhibition_content" class="exhibition_hero_scroll" data-target="onPage">
+			Scroll down
+		</a>
+	</section>
+
+	<!-- <div class="exhibition_name">
 		<h1>Work Out</h1>
 		<p>Kingston University</p>
+	</div> -->
+
+	<section id="exhibition_content" class="exhibition_content wrapper">
+
+		<section class="wrapper exhibition_work" data-exhibitor-list>
+
+			<ul class="list_reset list_inline">
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+				<li>
+					<a href="#" data-exhibitor-item>
+						<img src="http://placehold.it/500x400" alt="placeholder" />
+					</a>
+				</li>
+			</ul>
+
+		</section>
+
 	</div>
 
-	<section class="exhibition_work">
-
-		<ul class="list_reset list_inline">
-			<li>
-				<a href="#">
-					<img src="http://placehold.it/500x400" alt="placeholder" />
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="http://placehold.it/500x400" alt="placeholder" />
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="http://placehold.it/500x400" alt="placeholder" />
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="http://placehold.it/500x400" alt="placeholder" />
-				</a>
-			</li>
-			<li>
-				<a href="#">
-					<img src="http://placehold.it/500x400" alt="placeholder" />
-				</a>
-			</li>
-		</ul>
-
-	</section>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="../_scripts/vendor/jquery-2.0.0.min.js"><\/script>')</script>
+	<script src="../_scripts/all.js"></script>
 
 </body>
 </html>
