--- a/exhibitions/Call_Me/index.html
+++ b/exhibitions/Call_Me/index.html
@@ -22,10 +22,10 @@
 				<div class="hero_caption" data-exhibition-hero-caption>
 					<h1>Call Me</h1>
 					<hr>
-					<p class="intro">Kingston University<br />BA Illustration & Animation <br />BA Show</p>
+					<p class="intro">Kingston University<br />BA Illustration &amp; Animation <br />BA Show</p>
 					<hr>
 					<p class="intro">
-						Call Me is the Kingston University Illustration & Animation Degree Show of 2014.
+						Call Me is the Kingston University Illustration &amp; Animation Degree Show of 2014.
 					</p>
 				</div>
 			</div>
