--- a/exhibitions/index.html
+++ b/exhibitions/index.html
@@ -51,6 +51,13 @@
 							BA (Hons) Illustration &amp; Animation
 					</p>
 				</div>
+				<div data-exhibition-placeholder="4">
+					<img src="/_images/The_Collective/background.jpg" alt="placeholder" class="image_placeholder">
+					<p class="text_c margin_b_0">
+							<strong>Bath Spa University</strong><br />
+							BA (Hons) Photography
+					</p>
+				</div>
 
 			</div>
 		</div>
@@ -66,6 +73,9 @@
 				</li>
 				<li style="top: 200px; left: 600px;">
 					<a href="../exhibitions/Jewellery_14/" data-exhibition="2" class="orange">Jewellery '14</a>
+				</li>
+				<li style="top: 500px; left: 100px;">
+					<a href="../exhibitions/The_Collective/" data-exhibition="4" class="red">The Collective</a>
 				</li>
 				<!-- <li style="top: 500px; left: 100px;">
 					<a href="../exhibitions/Call_" data-exhibition="2" class="orange">The_Collective</a>
