--- a/exhibitions/index.html
+++ b/exhibitions/index.html
@@ -13,20 +13,19 @@
 </head>
 <body>
 
+	<header class="border_b">
+		<nav>
+			<ul class="list_reset list_inline">
+				<li><a href="../exhibitions/" class="is_current">Exhibitions</a></li>
+				<li><a href="../archive/">Archive</a></li>
+				<li><a href="../resources/">Resources</a></li>
+				<li><a href="../information/">Information</a></li>
+				<li class="right"><a href="../upload/">Upload</a></li>
+			</ul>
+		</nav>
+	</header>
+
 	<div class="wrapper">
-
-		<header class="border_b">
-			<nav>
-				<ul class="list_reset list_inline">
-					<li><a href="../exhibitions/" class="is_current">Exhibitions</a></li>
-					<li><a href="../archive/">Archive</a></li>
-					<li><a href="../resources/">Resources</a></li>
-					<li><a href="../information/">Information</a></li>
-					<li class="right"><a href="../upload/">Upload</a></li>
-				</ul>
-			</nav>
-		</header>
-
 		<div class="centered">
 			<div class="centered_content">
 
@@ -58,6 +57,13 @@
 							BA (Hons) Photography
 					</p>
 				</div>
+				<div data-exhibition-placeholder="5">
+					<img src="/_images/Design_Interactions_14/background.jpg" alt="placeholder" class="image_placeholder">
+					<p class="text_c margin_b_0">
+						<strong>Royal College of Art</strong><br />
+							MA Design Interactions
+					</p>
+				</div>
 
 			</div>
 		</div>
@@ -65,17 +71,20 @@
 		<<section class="container_page">
 			<ul class="list_reset list_exhibitions">
 
-				<li style="top: 50px; left: 100px;">
+				<li style="top: 240px; left: 180px;">
 					<a href="../exhibitions/Call_Me/" data-exhibition="3" class="green">Call Me</a>
 				</li>
-				<li style="top: 350px; left: 300px;">
+				<li style="top: 500px; left: 100px;">
 					<a href="../exhibitions/_ing/" data-exhibition="1" class="blue">_ing</a>
 				</li>
 				<li style="top: 200px; left: 600px;">
 					<a href="../exhibitions/Jewellery_14/" data-exhibition="2" class="orange">Jewellery '14</a>
 				</li>
-				<li style="top: 500px; left: 100px;">
+				<li style="top: 400px; left: 450px;">
 					<a href="../exhibitions/The_Collective/" data-exhibition="4" class="red">The Collective</a>
+				</li>
+				<li style="top: 50px; left: 50px;">
+					<a href="../exhibitions/Design_Interactions_14/" data-exhibition="5" class="gold">Design Interactions '14</a>
 				</li>
 				<!-- <li style="top: 500px; left: 100px;">
 					<a href="../exhibitions/Call_" data-exhibition="2" class="orange">The_Collective</a>
