--- a/information/index.html
+++ b/information/index.html
@@ -13,42 +13,37 @@
 </head>
 <body style="height: 100%;">
 
-	<div class="site_wrapper">
 
-		<div class="wrapper">
-
-			<header class="border_b">
-				<nav>
-					<ul class="list_reset list_inline">
-						<li><a href="../exhibitions/">Exhibitions</a></li>
-						<li><a href="../archive/">Archive</a></li>
-						<li><a href="../resources/">Resources</a></li>
-						<li><a href="../information/" class="is_current">Information</a></li>
-						<li class="right"><a href="../upload/">Upload</a></li>
-					</ul>
-				</nav>
-			</header>
-
-			<section class="container_page">
-
-				<ul class="list_reset list_large text_c">
-					<li>
-						<a href="../_documents/AboutUs.pdf" target="_blank">About us <sup>(PDF)</sup></a>
-					</li>
-					<li>
-						<a href="../_documents/HowToExhibit.pdf" target="_blank">How to Exhibit Guide <sup>(PDF)</sup></a>
-					</li>
-					<li>
-						<a href="../_documents/TermsandConditions.pdf" target="_blank">Terms &amp; Conditions <sup>(PDF)</sup></a>
-					</li>
+		<header>
+			<nav>
+				<ul class="list_reset list_inline">
+					<li><a href="../exhibitions/">Exhibitions</a></li>
+					<li><a href="../archive/">Archive</a></li>
+					<li><a href="../resources/">Resources</a></li>
+					<li><a href="../information/" class="is_current">Information</a></li>
+					<li class="right"><a href="../upload/">Upload</a></li>
 				</ul>
+			</nav>
+		</header>
+		<section class="container_info">
 
-			</section>
-		</div>
+			<div class="info_panel dark">
+				<div class="wrapper text_c">
+					<p>hand is a new online gallery exhibiting work by individuals and groups across all disciplines of art &amp; design.</p>
+				</div>
+			</div>
 
-	</div>
+			<div class="info_panel">
+				<div class="wrapper text_c">
+					<p>
+						For general enquiries: <a href="mailto:info@hand.gallery">info@hand.gallery</a><br />
+						Also, find us on <a href="https://www.facebook.com/handgallery" target="_blank">Facebook</a> or <a href="https://twitter.com/hello_hand" target="_blank">Twitter</a>
+					</p>
+				</div>
+			</div>
 
-		<footer>
+		</section>
+		<!-- <footer>
 			<div class="wrapper">
 				<div class="row">
 					<div class="col_1_3">
@@ -64,7 +59,7 @@
 					</div>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="../_scripts/vendor/jquery-2.0.0.min.js"><\/script>')</script>
