--- a/upload/index.html
+++ b/upload/index.html
@@ -13,8 +13,6 @@
 </head>
 <body class="color_negative">
 
-	<div class="wrapper">
-
 		<header class="border_b">
 			<nav>
 				<ul class="list_reset list_inline">
@@ -27,21 +25,25 @@
 			</nav>
 		</header>
 
+	<div class="wrapper">
+
 		<section class="centered is_visible" data-upload-step="0">
 			<div class="centered_content text_c">
-				<a href="../upload_exhibition" class="h1 underline">Create an exhibition</a><br />
-				<a href="../upload_exhibitor" class="h1 underline">Add an exhibitor</a>
+				<a href="../upload_exhibition" class="h1 underline">Add an Exhibition</a><br />
+				<span class="large">or</span>
+				<br />
+				<a href="../upload_exhibitor" class="h1 underline">Join an Exhibition</a>
 			</div>
 		</section>
 	</div>
 
-	<div class="pos_b">
+	<!-- <div class="pos_b">
 		<a href="../_documents/HowToExhibit.pdf" target="_blank">(How to Exhibit Guide)</a>
 	</div>
 
 	<div class="pos_b_r">
 		<a href="/" class="link_home">Home</a>
-	</div>
+	</div> -->
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="../_scripts/vendor/jquery-2.0.0.min.js"><\/script>')</script>
