--- a/upload_exhibition/index.html
+++ b/upload_exhibition/index.html
@@ -13,8 +13,6 @@
 </head>
 <body>
 
-	<div class="wrapper">
-
 		<header class="border_b">
 			<nav>
 				<ul class="list_reset list_inline">
@@ -27,10 +25,12 @@
 			</nav>
 		</header>
 
+	<div class="wrapper">
+
 		<section class="container_page" data-upload-step="0">
 
 			<form action="index.php" method="post" class="text_c" enctype="multipart/form-data"/>
-				<h2>Create an exhibition</h2>
+				<h2>Add an exhibition</h2>
 
 				<label for="name">Who you are:</label>
 				<input type="text" name="name" id="name" required placeholder="e.g. Kingston University, BA Graphic Design" />
@@ -46,8 +46,7 @@
 
 				<label for="fileAttach">Exhibition image:</label>
 				<input type="file" name="fileAttach" id="fileAttach" required value="Upload image" />
-				<p class="note">A .zip file with 1 image sized 1024px by 800px</p>
-				<div class="space"></div>
+				<p class="note">A .zip file with 1 Hi-res jpeg</p>
 				<button type="submit" name="submit">Submit</button>
 
 			</form>
