--- a/upload_exhibition_complete/index.html
+++ b/upload_exhibition_complete/index.html
@@ -13,8 +13,6 @@
 </head>
 <body class="color_negative">
 
-	<div class="wrapper">
-
 		<header class="border_b">
 			<nav>
 				<ul class="list_reset list_inline">
@@ -27,6 +25,8 @@
 			</nav>
 		</header>
 
+	<div class="wrapper">
+
 		<section class="centered is_visible" data-upload-step="0">
 			<div class="centered_content text_c">
 				<h1>Thanks, you may now<br /><a href="../upload_exhibitor" class="underline">Add an exhibitor</a></h1>
@@ -35,13 +35,13 @@
 
 	</div>
 
-	<div class="pos_b">
+	<!-- <div class="pos_b">
 		<a href="#">(How to Exhibit Guide)</a>
 	</div>
 
 			<div class="pos_b_r">
 				<a href="/" class="link_home">Home</a>
-			</div>
+			</div> -->
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="../_scripts/vendor/jquery-2.0.0.min.js"><\/script>')</script>
