--- a/upload_exhibitor_complete/index.html
+++ b/upload_exhibitor_complete/index.html
@@ -13,8 +13,6 @@
 </head>
 <body class="color_negative">
 
-	<div class="wrapper">
-
 		<header class="border_b">
 			<nav>
 				<ul class="list_reset list_inline">
@@ -27,18 +25,20 @@
 			</nav>
 		</header>
 
+	<div class="wrapper">
+
 		<section class="centered is_visible" data-upload-step="0">
 			<div class="centered_content text_c">
-				<h1>Thanks, the exhibitor has been added<br />
+				<h1>Thanks, the exhibitor has been added.<br />
 				<a href="../upload_exhibitor" class="underline">Add another exhibitor</a></h1>
 			</div>
 		</section>
 
 	</div>
 
-			<div class="pos_b_r">
+			<!-- <div class="pos_b_r">
 				<a href="/" class="link_home">Home</a>
-			</div>
+			</div> -->
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="../_scripts/vendor/jquery-2.0.0.min.js"><\/script>')</script>
