--- a/exhibitions/Design_Interactions_14/Johanna_Schmeer/index.html
+++ b/exhibitions/Design_Interactions_14/Johanna_Schmeer/index.html
@@ -17,36 +17,28 @@
 			<div class="pos_b_l">
 				<p class="margin_b_0">
 
-					<!-- EDITABLE REGION -->
-					<a href="/exhibitions/Design_Interactions_14/" class="margin_b_0">
+
+						Johanna Schmeer<br />
 						<strong>
 						Design Interactions '14
 						</strong>
 						<br />
 						Royal College of Art
-					</a>
-					<!-- END EDITABLE REGION -->
+
 
 				</p>
 			</div>
 
-			<div class="pos_b_r">
-				<a href="/" class="link_home">Home</a>
-			</div>
+
 			<div class="pos_t_l">
-				<p><a href="/exhibitions/Design_Interactions_14/"><strong>Overview</strong></a></p>
-			</div>
-
-			<div class="pos_t">
-
-				<!-- EDITABLE REGION -->
-				<p class="margin_b_0">
-					<strong>
-						Johanna Schmeer
-					</strong>
+				<p>
+					<a href="/">
+						- Home
+					</a><br />
+					<a href="/exhibitions/Design_Interactions_14/">
+						- Overview
+					</a>
 				</p>
-				<!-- END EDITABLE REGION -->
-
 			</div>
 
 			<div class="pos_t_r">
